# test-cargo-template-stm32

./: Cargo.toml  README.md  build.rs  cargo-generate.toml  main.rs  memory.x
.cargo/: config.toml
examples/: i2c.rs  who_am_i.rs
src/: main.rs
