[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

{% if framework == "stm32rs" -%}
# STM32 HAL dependencies
stm32f4xx-hal = { version = "0.21", features = ["rt", "{{mcu}}"] }
nb = "1.0"
{% endif -%}

{% if framework == "embassy" -%}
# Embassy dependencies
embassy-stm32 = { version = "0.1", features = ["{{mcu}}", "time-driver-any", "exti"] }
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = "0.1"
defmt = "0.3"
defmt-rtt = "0.4"
static_cell = "2"
{% endif -%}

# Optional features
[features]
default = []

# Profile optimizations
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false

[profile.dev]
debug = true
lto = false
opt-level = 1
